feat: rebuild and publish(1.0.0)

--- a/test/public/index.html
+++ b/test/public/index.html
@@ -1,3 +1,10 @@
+<!--
+ * @name: 
+ * @author: SunSeekerX
+ * @Date: 2020-04-23 09:24:18
+ * @LastEditors: SunSeekerX
+ * @LastEditTime: 2020-04-23 19:09:41
+ -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,11 +12,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>web-storage-apis test</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but web-storage-apis test doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
